@startuml state-machine

' ==========================
'  Preamble
' ==========================

!include styledefs.iuml

title State Machine Class Diagram\n

' ==========================
'  Definitions
' ==========================

class StateMachineController $stereo("MonoBehaviour")
{
    + $get $type("IState") CurrentState
    + $get $type("float")  CurrentStateTime
}

package GameData <<Database>>
{
    class StateMachine $stereo("ScriptableObject")
    {
        + $get $type("IState[]")          States
        + $get $type("StateTransition[]") Transitions
        '
        + $type("bool") IsInState<T>()
        + $type("void") SetState<T>()
    }

    class StateTransition
    {
        + $get $type("IState") Source
        + $get $type("IState") Target
        '
        + $get $type("IStateTransitionCondition") Condition
    }

    interface IState
    {
        + $type("void") OnStateEnter()
        + $type("void") OnStateUpdate()
        + $type("void") OnStateExit()
    }

    interface IStateTransitionCondition
    {
        + $type("bool") Validate()
    }
}

' ==========================
'  Relationships
' ==========================

StateMachineController *-- StateMachine

StateMachine    "1" o-- "n" IState
StateMachine    "1" o-- "n" StateTransition
StateTransition "1" o-- "n" IStateTransitionCondition

' ==========================
'  Notes
' ==========================

note left of StateMachine::IsInState
    T is IState
end note

' ==========================

@enduml